cmake_minimum_required(VERSION 3.9)
# set the project name
project(SimElectrical)
set(Python_ADDITIONAL_VERSIONS 3.7)
find_package(Python COMPONENTS Interpreter Development)
find_package(PythonLibs REQUIRED)
# add the executable
include_directories(${PYTHON_INCLUDE_DIRS} Include)
add_executable(SimElectrical ${CMAKE_SOURCE_DIR}/lib/pythonlib/readfile.cpp)
target_link_libraries(SimElectrical ${PYTHON_LIBRARIES})
message("My_Source:${CMAKE_SOURCE_DIR}")
message("Python_FOUND:${Python_FOUND}")
message("Python_VERSION:${Python_VERSION}")
message("Python_Development_FOUND:${Python_Development_FOUND}")
message("Python_LIBRARIES:${Python_LIBRARIES}")
message("Python_INCLUDE_DIR:${PYTHON_INCLUDE_DIRS}")
add_subdirectory(source)
add_subdirectory(lib)
